@@ -15,6 +15,9 @@ RELEASE 0.97 - XXX
   - Allow Help() to be called multiple times, appending to the help
     text each call.
 
+  - Allow Tools found on a toolpath to import Python modules from
+    their local directory.
+
   From Steve Christensen:
 
   - Handle exceptions from Python functions as build actions.
